--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gatsby-transformer-remark": "^2.10.0",
     "gh-pages": "^3.1.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
